data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectBranchTargetResolution_3894.wast
;; 3. **Test Description:**    Design a `call_indirect` instruction that invokes a function with a loop containing a `br_if` instruction. Validate that the conditional branch correctly re-enters the loop or exits based on the condition. An incorrect branch target resolution would misinterpret the loop structure.

(assert_invalid
  (module
    (type $sig (func (param i32) (result i32)))
    (func $loop_func (param i32) (result i32)
      (local.get 0)
      (loop
        (local.get 0)
        (i32.const 1)
        (i32.sub)
        (local.set 0)
        (local.get 0)
        (i32.const 0)
        (i32.ne)
        (br_if 0)
      )
      (local.get 0)
    )
    (table 1 funcref (elem $loop_func))
    (func (param i32) (result i32)
      (local.get 0)
      (call_indirect (type $sig) (local.get 0))
    )
  )
  "type mismatch"
)